fixed whitespace issues in aboutus, account, and home

--- a/src/components/404/404.scss
+++ b/src/components/404/404.scss
@@ -1,21 +1,17 @@
-.error-404{
+.error-404 {
     background-image: url('../../assets/images/homepage-background.jpg');
-    background-repeat: no-repeat;
     background-attachment: fixed; 
     background-size: cover;
-
     position: relative;
     left: 5%;
-    background-color: #a4d8d0;
     width: 90%;
     margin-top: 50px;
-    color: white;
-    text-align: center;
     border-radius: 15px;
     padding: 15px;
-    box-sizing: border-box;
+    color: white;
+    text-align: center;
 
-    i{
+    i {
         font-size: 3em;
         color: white;
     }
