--- a/src/components/account/sign_in/sign_in.scss
+++ b/src/components/account/sign_in/sign_in.scss
@@ -1,11 +1,9 @@
 .sign-in-page {
     background-image: url("../../../assets/images/sign_in.jpg");
-    background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
-    width:100%;
+    width: 100%;
     height: 90vh;
-    top: 10vh;
 
     .message {
         color: rgb(125, 0, 0);
@@ -27,7 +25,7 @@
             text-align: center;
             font-family: 'Dancing Script', cursive;
             font-size: 2em;
-            color:#2b616d;
+            color: #2b616d;
         }
 
         .signin-input {
@@ -57,11 +55,8 @@
                 background-color: #2b616d;
                 cursor: pointer;
             }
-
         }
     }
-
-    
 }
 
 @media (min-width: 1025px) {
