--- a/src/components/account/sign_up/sign_up.scss
+++ b/src/components/account/sign_up/sign_up.scss
@@ -1,9 +1,8 @@
 .sign-up-page {
     background-image: url("../../../assets/images/sign_up.jpg");
-    background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
-    width:100%;
+    width: 100%;
     height: 90vh;
 
 
@@ -13,20 +12,20 @@
         font-size: 1.2em;
     }
 
-    .sign-up-form{
+    .sign-up-form {
         background-color: rgba(178, 219, 213, 0.9);
         overflow-y: hidden;
         border-radius: 15px;
         margin: 10px;
-        -webkit-box-shadow: 0px 0px 6px 0px rgba(194,194,194,1);
-        -moz-box-shadow: 0px 0px 6px 0px rgba(194,194,194,1);
-        box-shadow: 0px 0px 6px 0px rgba(194,194,194,1);
+        -webkit-box-shadow: 0 0 6px 0 rgba(194, 194, 194, 1);
+        -moz-box-shadow: 0 0 6px 0 rgba(194, 194, 194, 1);
+        box-shadow: 0 0 6px 0 rgba(194, 194, 194, 1);
 
         .sign-up-title {
             text-align: center;
             font-family: 'Dancing Script', cursive;
             font-size: 2em;
-            color:#2b616d;
+            color: #2b616d;
             margin: 5px auto;
         }
 
@@ -41,7 +40,6 @@
                 border-bottom: 1px solid #94c9c1;
                 color: #2b616d;
             }
-    
         }
 
         .signup-btn {
@@ -52,11 +50,8 @@
                 margin: 5px;
                 color: white;
             }
-
         }
     }
-
-    
 }
 
 @media (min-width: 1025px) {
