--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,7 +1,6 @@
 .home-page {
     height: 90vh;
     background-image: url('../../assets/images/homepage-background2.jpg');
-    background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
@@ -11,9 +10,9 @@
         transform: translate(-50%, -50%);
         left: 50%;
         color: white;
-        width: 80%;
         text-align: center;
     }
+
     h4 {
         font-family: 'Dancing Script', cursive;
         font-size: 2.5em;
@@ -22,7 +21,8 @@
     .title-blurb1 {
         top: 20%;
     }
-    .title-blurb3{
+
+    .title-blurb3 {
         top: 27.5%;
     }
 
@@ -43,15 +43,15 @@
         padding: 0;
 
         .btn {
+            background-color: rgba(164, 216, 208, .7);
             margin: 15px 0;
             width: 100%;
             height: 70px;
-            font-size: 1.5em;
-            color: white;
+            border-radius: 5px;
             text-transform: uppercase;
             letter-spacing: 1px;
-            background-image: linear-gradient(rgba(164, 216, 208, .7), rgba(164, 216, 208, .7));
-            border-radius: 5px;
+            font-size: 1.5em;
+            color: white;
 
             &:hover, &:active {
                 background-color: rgba(164, 216, 208, .7);
@@ -59,39 +59,24 @@
         }
     }
 
-
-
     .home-modal {
-        background-image: linear-gradient(rgba(164, 216, 208, .9), rgba(164, 216, 208, .8));
+        background-color: rgba(164, 216, 208, .9);
         border-radius: 15px;
         text-align: center;
         font-size: 1.5em;
         color: white;
-        -webkit-box-shadow: 0px 0px 34px -2px rgba(168,168,168,1);
-        -moz-box-shadow: 0px 0px 34px -2px rgba(168,168,168,1);
-        box-shadow: 0px 0px 34px -2px rgba(168,168,168,1);
-        // height: 100%;
-        overflow-y: hidden;
+        -webkit-box-shadow: 0 0 34px -2px rgba(168, 168, 168, 1);
+        -moz-box-shadow: 0 0 34px -2px rgba(168, 168, 168, 1);
+        box-shadow: 0 0 34px -2px rgba(168, 168, 168, 1);
 
         .homepage-modal-header {
             padding-top: 15px;
         }
-        form{
-            p{
+
+        form {
+            p {
                 font-size: 0.7em;
                 color: rgb(151, 3, 3);
-            }
-        }
-
-        .popup-container {
-            top: 0;
-            height: 100%;
-    
-            .popup-content {
-                width: 80%;
-                left: 50%;
-                top: 50%;
-                transform: translate(-50%, -50%);
             }
         }
 
@@ -99,25 +84,23 @@
             margin: 10px;
 
             &>input {
-            border: 1px solid transparent;
-            outline: none;
-            background-color:rgba(255, 255, 255, 0.8);
-            width: 85%;
-            border-radius: 5px;
-            color:#2b616d;
+                background-color: rgba(255, 255, 255, 0.8);
+                border: 1px solid transparent;
+                outline: none;
+                width: 85%;
+                border-radius: 5px;
+                color: #2b616d;
 
-                &::placeholder{
-                    color: rgba(43,97,109, 0.6);
+                &::placeholder {
+                    color: rgba(43, 97, 109, 0.6);
                     font-size: 0.7em;
                 }
             }
-
-
         }
 
         .start-trip-btn {
             color: white;
-            background-image: linear-gradient(rgba(250, 141, 98, .9), rgba(250, 141, 98, .9));
+            background-color: rgba(250, 141, 98, .9);
             width: 60%;
             margin: 0 0 10px 0;
 
@@ -129,7 +112,13 @@
 }
 
 @media (min-width: 1025px) {
-    .home-page .home-page-btn .btn{
+    .home-page .home-page-btn .btn {
+        width: 40%;
+    }
+
+    .home-page .popup-content {
+        position: relative;
+        left: 30%;
         width: 40%;
     }
 }
